Version 0.1.4 (2018-02-26)
	remove, classic theme
	added, Links-Settings and public links section
Version 0.1.3 (2018-02-23)
	bugfix, fixed many many other minor bugs
Version 0.1.2 (2018-02-22)
	added, brandnew installer
	added, settings for mainpage
	added, mainpage
	added, contact enqiery
	bugfix, fixed many many other minor bugs
	update, Updating tinymce/tinymce (4.7.6 => 4.7.7)
Version 0.1.1 (2018-02-15)
	update, tinymce editor (4.7.5 => 4.7.6)
Version 0.1.0 (2018-01-30)
	added, tagline in sites
	bugfix, fixed many many other minor bugs
Version 0.0.9 (2018-01-29)
	bugfix, fixed many many other minor bugs
	added, dynamic navbar in public part
Version 0.0.8 (2018-01-25)
	bugfix, badges works again
	bugfix, fixed many many other minor bugs
	added, integrate new glyphicons
	added, function to hide the navigation bar on the left
	update, update from bootstrap-3.3.7 to bootstrap-4.0.0
	update, rename theme name "bootstrap-3.3.7" to "default"
Version 0.0.7 (2018-01-24)
	update, tinymce editor (4.7.4 => 4.7.5)
Version 0.0.6 (2018-01-19)
	bugfix, delete in downloads works again
	bugfix, delete in links works again
	bugfix, delete in news works again
Version 0.0.5 (2018-01-19)
	added, sites can be created
	update, public section
Version 0.0.4 (2018-01-18)
	new, blog url can be set in general-settings
Version 0.0.3 (2018-01-18)
	bugfix, edit in downloads working again
	bugfix, edit in links working again
	bugfix, edit in articles working again
	bugfix, show id in downloads overview
	update, downloads overview use glyphs for edit, copy and delete instead of text
	update, many improvements in the cms-surface
	update, deactivate dashboard and trash. new implementation.
Version 0.0.2 (2018-01-17)
	update, "user-edit" shows in header first and last name
Version 0.0.1 ()
	added, directory "docs" with changelogs file