@@ -18,6 +18,12 @@
 	border-color: #337ab7;
 }
 
+.list-group-item-action.active {
+	background-color: #f8f9fa;
+	border: 1px solid rgba(0,0,0, 0.125);
+	color: black;
+}
+
 .spacing {
 	margin-top: 5px;
 	margin-bottom: 10px;
